Including url to theme module.

--- a/hugo.toml
+++ b/hugo.toml
@@ -3,3 +3,7 @@ languageCode = 'en-us'
 title = 'LauraTech'
 sectionPagesMenu = 'main'
 
+module:
+  imports:
+    github.com/alexandrevicenzi/soho
+    
