--- a/hugo.toml
+++ b/hugo.toml
@@ -3,5 +3,10 @@ languageCode = 'en-us'
 title = 'LauraTech'
 sectionPagesMenu = 'main'
 
-module = 'github.com/alexandrevicenzi/soho'
+[module]
+  [[module.imports]]
+    disable = false
+    ignoreConfig = false
+    ignoreImports = false
+    path = 'github.com/alexandrevicenzi/soho'
     
