--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/soho"]
 	path = themes/soho
 	url = https://github.com/alexandrevicenzi/soho.git
+[submodule "soho"]
+	path = soho
+	url = https://github.com/alexandrevicenzi/soho.git
