This fixes the missing themes error message locally.

--- a/hugo.toml
+++ b/hugo.toml
@@ -8,5 +8,5 @@ sectionPagesMenu = 'main'
     disable = false
     ignoreConfig = false
     ignoreImports = false
-    path = 'github.com/alexandrevicenzi/soho'
+    path = 'soho'
     
